--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "pg": "^8.12.0",
     "prisma": "^5.16.2",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "vercel": "^37.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
